@@ -1,3 +1,9 @@
+Wed May 30 13:22:54 GMT 2012  Olly Betts <olly@survex.com>
+
+	* include/xapian/weight.h,weight/weight.cc: We were failing to call
+	  init() for Weight objects providing the term-independent weight.
+	  These now get called with init(0.0).
+
 Wed May 30 13:13:03 GMT 2012  Olly Betts <olly@survex.com>
 
 	* include/xapian/weight.h: Remove duplicate "need_stat(WDF);" calls,
